# fyers

./: .env.example  .gitignore  .python-version  CHANGELOG.md  Plan.md  README.md  architecture-live-config.md  config.py  config.yaml  data_coverage.txt  environment-management.md  fyers_token.txt  live_cofig.yaml-backup  md  package-lock.json  paper_trading_plan.md  paper_trading_task.md  project-brief-live-config.md  pt_config_options.yaml  pt_config_stocks.yaml  pyproject.toml  requirements.txt  run_backtest.py  test_fyers_token.py  watch_20250909-135317
.bmad-core/: install-manifest.yaml
.ipynb_checkpoints/: GetTickData-checkpoint.ipynb  HistoricalData-checkpoint.ipynb  RaviTickdata-checkpoint.ipynb  Untitled1-checkpoint.ipynb  app-checkpoint.py  btc-backtesting-checkpoint.ipynb  crossovercount-checkpoint.ipynb  sma-crossover-checkpoint.ipynb  telegram_ticks-checkpoint.py
data/: README.md  live_data_prepared_for_2025-09-08.txt  live_data_prepared_for_2025-09-09.txt  live_data_prepared_for_2025-09-10.txt  live_market_data.sqlite  live_symbols.json  symbol_master_2025-09-12.stamp  symbol_master_2025-09-15.stamp  symbol_master_2025-09-17.stamp  symbol_master_2025-09-19.stamp  trading_log.sqlite
docs/: Plan.md  brainstorming-session-results.md  brownfield-architecture.md  environment-management.md  fyers-trading-concepts.md  lot-size-management.md  prd-opening-price-crossover.md  project-brief-backtesting-v2.md  project-brief-opening-price-crossover.md  project-brief-papertrading-v2.md  session_handover_notes.md  sop_new_code_deployment_on_ec2.md  user_guide.md
docs/stories/: feat-enhance-backtesting-engine-multi-timeframe.md  feat-implement-ltp-crossover-count-filter.md  feat-implement-v1-opening-price-crossover-strategy.md
scripts/: update_daily_bar_timestamps.py
src/: archive_live_data.py  auth.py  check_data_coverage.py  check_ticks.py  config.py  db_setup.py  fetch_historical_data.py  fetch_symbol_master.py  fetch_symbols.py  live_config_manager.py  market_calendar.py  prepare_live_data.py  run_atr_rr_optimization.py  symbol_manager.py  tick_collector.py  trading_scheduler.py  verify_db_content.py
web_ui/: __init__.py  backtesting_ui.py  brownfield-architecture.md  bt_utils.py  charts_ui.py  dashboard.py  feature_requests.md  opening_price_crossover.py  papertrader_ui.py  pt_utils.py  st_autorefresh.py  utils.py
(+43 files in other folders)
